# ServerManager

./: .gitignore  .gitingore  .gitmodules  CMakeLists.txt  README.md  ServerManager.pro  computer.cpp  computer.h  computerinfo.cpp  computerinfo.h  computerinfo.ui  computerwidget.cpp  computerwidget.h  computerwidget.ui  dialwidget.cpp  dialwidget.h  exception.h  hexspinbox.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  sshClient.cpp  sshClient.h  user.cpp  user.h
src/: main.cpp  mainwindow.cpp
src/core/: commandspipeline.cpp  commandspipeline.h  computer.cpp  computer.h  exception.h  sshClient.cpp  sshClient.h  user.cpp  user.h
src/ui/: computerinfo.ui  computerwidget.ui  mainwindow.ui
src/widget/: computerinfo.cpp  computerinfo.h  computerwidget.cpp  computerwidget.h  dialwidget.cpp  hexspinbox.cpp  hexspinbox.h
